istio/policy/authz/allow-by-principals.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-by-principals
spec:
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/nginx
  selector:
    matchLabels:
      app: httpbin
